[package]
name = "offwall"
version = "1.1.0"
authors = ["Bastian Germann"]
license = "X11"
repository = "https://github.com/bgermann/offwall"
documentation = "https://docs.rs/crate/offwall"
readme = "README.md"
description = "A simple, CSV-reading OpenFlow controller dedicated to firewall bypassing"

[features]
tls = ["tls-api-openssl"]

[dependencies]
byteorder = "1.1"
notify = "4.0"
ipnetwork = "0.14"
log = "0.4"
simple_logger = "1.0"
rust-ini = "0.13"
rand = "0.6"
tls-api = "0.1"
tls-api-openssl = { version = "0.1", optional = true }

[dependencies.clap]
version = "2"
default-features = false

[target.'cfg(unix)'.dependencies]
libc = "0.2"
log-panics = "2.0"
syslog = "4.0"
